collection index get endpoint
