# app/routes/collection-indexes-routes.js
@@ -8,4 +8,7 @@ const router = express.Router();
 router.route('/collection-indexes')
     .get(collectionIndexesController.retrieveAll)
 
+router.route('/collection-indexes/remote')
+    .get(collectionIndexesController.retrieveByUrl)
+
 module.exports = router;
